# dataos

./: .env.example  .gitignore  CLAUDE.md  Makefile  dagster_cloud.yaml  docker-compose.yml
backend/: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 25091e364040_add_static_value_to_mappings.py  25c86c44d4f0_update_admin_password.py  3629c0126412_add_datasets_sources_pipeline.py  7683629f6b9c_add_releases_and_versioning.py  882b91ad83d2_add_confidence_to_mappings.py  9e200617814a_add_service_and_setup_state_to_.py  a1b2c3d4e5f6_promote_data_source_drop_dataset.py  b2c3d4e5f6a7_add_transform_columns.py  bec0febc32f0_initial_tables.py  dbf47393a748_add_ai_suggested_and_confidence_to_.py  eb6acd09f2df_add_fivetran_sync_details_to_connectors.py  f0995f8d3a92_add_mappings_accepted.py
backend/src/izakaya_api/: bq.py  config.py  db.py  deps.py  main.py
backend/src/izakaya_api/core/: dependencies.py  exceptions.py  logging.py
backend/src/izakaya_api/dataset_types/: __init__.py  base.py  paid_media.py  sales.py
backend/src/izakaya_api/models/: __init__.py  connector.py  data_source.py  dataset.py  label_rule.py  mapping.py  pipeline_run.py  release.py  user.py  validation_error.py
backend/src/izakaya_api/routers/: auth.py  connectors.py  dashboard.py  data_sources.py  datasets.py  explore.py  labels.py  mappings.py  pipeline.py  releases.py
backend/src/izakaya_api/schemas/: connector.py  dashboard.py  data_source.py  dataset.py  explore.py  label_rule.py  mapping.py  pipeline_run.py  release.py
backend/src/izakaya_api/services/: ai.py  auth.py  bigquery.py  fivetran.py
pipeline/: CLAUDE.md  dagster_cloud.yaml  pyproject.toml  setup.py
pipeline/.tmp_dagster_home_j6p2ch6j/history/: runs.db
pipeline/.tmp_dagster_home_j6p2ch6j/history/runs/: 3022f908-e45c-4e1e-a615-271e37dac705.db  3022f908-e45c-4e1e-a615-271e37dac705.db-shm  334122fa-1c0b-40aa-bbc7-e6d6d1db5cbc.db  334122fa-1c0b-40aa-bbc7-e6d6d1db5cbc.db-shm  37cbf90e-dabe-43dc-9b8e-29f666af87b2.db  37cbf90e-dabe-43dc-9b8e-29f666af87b2.db-shm  5eaab7cc-f5f5-4248-8a6a-d3d07d3297bc.db  index.db  (+11 more)
pipeline/.tmp_dagster_home_nyq4lwm0/history/: runs.db
pipeline/.tmp_dagster_home_qk1xmwuo/history/: runs.db
pipeline/dbt/: .user.yml  dbt_project.yml  profiles.yml
pipeline/dbt/macros/: generate_schema_name.sql  normalize_date.sql  normalize_types.sql
pipeline/src/izakaya_pipeline/: config.py  credentials.py  definitions.py  resources.py  sensors.py
(+213 files in other folders)
