[project]
name = "izakaya-pipeline"
version = "0.1.0"
description = "Izakaya Dagster pipeline"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "dagster-fivetran>=0.25",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/izakaya_pipeline"]

[tool.dagster]
module_name = "izakaya_pipeline.definitions"
