[project]
name = "izakaya-pipeline"
version = "0.1.0"
description = "Izakaya Dagster pipeline"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.9",
    "dagster-cloud",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "google-cloud-bigquery>=3.25",
    "pandas>=2.0",
    "httpx>=0.27",
    "db-dtypes>=1.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver>=1.9",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/izakaya_pipeline"]

[tool.dagster]
module_name = "izakaya_pipeline.definitions"
